Adapta documentación: _concat recibe solo un parámetro

--- a/functions/concat.html
+++ b/functions/concat.html
@@ -68,23 +68,23 @@
         <section class="content">
           <article id="syntax">
             <p>
-              El método <code>_concat()</code> se usa para unir dos o más arrays. Este método no cambia los arrays existentes, sino que
+              El método <code>_concat()</code> se usa para unir dos arrays. Este método no cambia los arrays existentes, sino que
               devuelve un nuevo array.
             </p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox"><em>array1</em>._concat(<em>arrays2</em>, <em>array3</em>, <em>...arrayN</em>)</p>
+            <p class="syntaxbox"><em>array1</em>._concat(<em>array2</em>)</p>
             <h3>Parámetros</h3>
             <dl>
               <dt>
                 <code class="code-params">array</code>
               </dt>
               <dd class="description">
-                Los arrays que se unirán al array original para conformar uno nuevo.
+                Los arrays que se unirán para conformar uno nuevo.
               </dd>
             </dl>
             <h3>Valor de retorno</h3>
             <p class="description">
-              Devuelve un nuevo array con la concatenación de todos los pasados por parámetros.
+              Devuelve un nuevo array con la concatenación del array original y el que se pasó como parámetro.
             </p>
           </article>
           <article id="examples">
