--- a/functions/min.html
+++ b/functions/min.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="favicon" href="../img/favicon.ico" />
     <title>_min() | MDN Clone</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../css/templateStyle.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/functionStyle.css" />
