--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="favicon" href="img/favicon.ico" />
     <title>MDN Clone</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/templateStyle.css" />
   </head>
@@ -53,21 +54,20 @@
         <section class="content">
           <p>
             JavaScript (JS) is a lightweight interpreted or just-in-time compiled programming language with first-class functions.
-            While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such
-            as Node.js, Apache CouchDB and Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, dynamic language,
-            supporting object-oriented, imperative, and declarative (e.g. functional programming) styles. Read more about
-            JavaScript.
+            While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such as
+            Node.js, Apache CouchDB and Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, dynamic language, supporting
+            object-oriented, imperative, and declarative (e.g. functional programming) styles. Read more about JavaScript.
           </p>
           <p>
-            This section is dedicated to the JavaScript language itself, and not the parts that are specific to Web pages or other
-            host environments. For information about APIs specific to Web pages, please see Web APIs and DOM.
+            This section is dedicated to the JavaScript language itself, and not the parts that are specific to Web pages or other host
+            environments. For information about APIs specific to Web pages, please see Web APIs and DOM.
           </p>
           <p>
-            The standard for JavaScript is ECMAScript. As of 2012, all modern browsers fully support ECMAScript 5.1. Older
-            browsers support at least ECMAScript 3. On June 17, 2015, ECMA International published the sixth major version of
-            ECMAScript, which is officially called ECMAScript 2015, and was initially referred to as ECMAScript 6 or ES6. Since
-            then, ECMAScript standards are on yearly release cycles. This documentation refers to the latest draft version, which
-            is currently ECMAScript 2020.
+            The standard for JavaScript is ECMAScript. As of 2012, all modern browsers fully support ECMAScript 5.1. Older browsers
+            support at least ECMAScript 3. On June 17, 2015, ECMA International published the sixth major version of ECMAScript, which
+            is officially called ECMAScript 2015, and was initially referred to as ECMAScript 6 or ES6. Since then, ECMAScript
+            standards are on yearly release cycles. This documentation refers to the latest draft version, which is currently
+            ECMAScript 2020.
           </p>
         </section>
       </div>
